Documentation for Registration Type endpoints and Swagger Docs Generation
